--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,8 +2,8 @@
   <div class="header">
     {{ partial "sidebarheader.html" . }}
 
-	{{ if .Site.Params.sidebarphoto}}
-	  <img src="{{.Site.Params.sidebarphoto}}" class="sidebarphoto">
+	{{ if .Site.Params.photo}}
+	  <img src="{{.Site.Params.photo}}" height="200" width="200" class="profilepic" style="border-radius:50%;">
 	{{ end }}
 
     {{ if .Site.Params.sidebartitle }}<h1 class="brand-title">{{ .Site.Params.sidebartitle }}</h1>{{ end }}
@@ -25,9 +25,20 @@
         <a href="{{ .URL }}" target="_blank">{{ .Pre }}</a>
         {{ end }}
       {{ end }}
-      
     </div>
     {{ end }}
+    
+	{{ if .Site.Menus.site }}
+	  <hr class="nav-site-separator"/>
+	  <nav class="nav">
+      <ul class="nav-list">
+	    {{ range .Site.Menus.site }}
+		   <li class="nav-site"><a href="{{.URL}}" target="_blank">{{.Name}}</a></li>
+		{{ end }}
+	  </ul>
+	  </nav>
+	{{ end }}
+	
 
   </div>
 </div>
